# yamnix

./: README.md
docs/: README.md
libraries/: README.md
libraries/python/: README.md
libraries/python/yamnix-cli/: pyproject.toml
libraries/python/yamnix-cli/tests/: test_yamnix_cli.py
libraries/python/yamnix-cli/yamnix_cli/: arguments.py  output.py
libraries/python/yamnix-codegen/: pyproject.toml
libraries/python/yamnix-codegen/tests/: test_yamnix_codegen.py
libraries/python/yamnix-codegen/yamnix_codegen/: arguments.py
libraries/python/yamnix-core/: pyproject.toml
libraries/python/yamnix-core/definitions/v1/: yamnix.openapi.yaml
libraries/python/yamnix-core/definitions/v1/schemas/: UserInterfaceSpec.yaml
libraries/python/yamnix-core/tests/: test_yamnix_core.py
libraries/python/yamnix-core/yamnix_core/: console.py
libraries/python/yamnix-profiles/: pyproject.toml
libraries/python/yamnix-profiles/tests/: test_yamnix_profiles.py
services/python/yamnix-codegen-service/: pyproject.toml
services/python/yamnix-codegen-service/tests/: test_yamnix_codegen_service.py
services/python/yamnix-profiles-service/: pyproject.toml
services/python/yamnix-profiles-service/tests/: test_yamnix_profiles_service.py
tools/: README.md
tools/yamnix-profiles-cli/: cli.yx.yaml  pyproject.toml
tools/yamnix-profiles-cli/tests/: test_yamnix_profiles_cli.py
tools/yamnix-profiles-cli/yamnix_profiles_cli/: yamnix.py
tools/yamnix-shell/: cli.yx.yaml  pyproject.toml  yamnix
tools/yamnix-shell/tests/: test_yamnix_profiles_cli.py
tools/yamnix-shell/yamnix_shell/: yamnix.py
