[tool.poetry]
name = "yamnix-profiles-cli"
version = "0.1.0"
description = ""
authors = ["Alexander Chichenin <achichenin@dataart.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yamnix = "yamnix_profiles_cli.yamnix:main"
