[tool.poetry]
name = "yamnix-shell"
version = "0.1.0"
description = ""
authors = ["Alexander Chichenin <achichenin@dataart.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
yamnix-core= { path = "../../libraries/python/yamnix-core/", develop = true }
yamnix-cli= { path = "../../libraries/python/yamnix-cli/", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yamnix = "yamnix_shell.yamnix:main"
