[tool.poetry]
name = "yamnix-cli"
version = "0.1.0"
description = ""
authors = ["Alexander Chichenin <achichenin@dataart.com>"]

[tool.poetry.dependencies]
python = "^3.9"
#yamnix-core = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
yamnix-core= { path = "../yamnix-core/", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


