[tool.poetry]
name = "yamnix-codegen-service"
version = "0.1.0"
description = ""
authors = ["Alexander Chichenin <achichenin@dataart.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yamnix-core= { path = "../../libraries/yamnix-core/", develop = true }
yamnix-codegen= { path = "../../libraries/yamnix-codegen/", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
